k8s/slack-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack-app
  labels:
    app: slack-app
spec:
  selector:
    matchLabels:
      app: slack-app
  replicas: 1
  template:
    metadata:
      labels:
        app: slack-app
    spec:
      containers:
      - name: slack-app
        image: gcr.io/zeebe-io/slack-app:latest
        imagePullPolicy: Always
        # https://kubernetes.io/docs/concepts/configuration/secret/#using-secrets-as-environment-variables
