k8s/slack-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: slack-ingress
spec:
  backend:
    serviceName: slack-app-svc
    servicePort: 80
